Perkin-UAT/force-app/main/default/objects/B2B_Payment_Methods_By_Country__mdt/B2B_Payment_Methods_By_Country__mdt.object-meta.xml
<CustomObject>
    <description>Payment Methods for Stripe Checkout based off of Country Code</description>
    <label>B2B Payment Methods By Country</label>
    <pluralLabel>B2B Payment Methods By Countries</pluralLabel>
</CustomObject>