Perkin-UAT/force-app/main/default/objects/B2B_Payment_Methods_By_Country__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Stores the country code (e.g., US, CN).</description>
    <label>Country Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>