Perkin-UAT/force-app/main/default/objects/B2B_Payment_Methods_By_Country__mdt/fields/Payment_Method_Options__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Options__c</fullName>
    <label>Payment Method Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>