Perkin-UAT/force-app/main/default/objects/B2B_Payment_Methods_By_Country__mdt/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <description>Stores comma-separated payment methods (e.g., card,alipay,wechat_pay)</description>
    <label>Payment Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>